# python-dependency-manager-companion-mcp-server

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README-dockerhub.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: README-codeql.md  README.md  auto-update-docs.yml  auto-update-index.yml  auto-update-publish.yml  auto-update-publish.yml.example  auto-update.yml  codeql.yml
prompts/: prompt-commit-msg-gen.md  prompt-issue-gen.md  prompt-pull-request-gen.md  prompt-readme-gen.md
scripts/: clean-assets-design.md  clean-assets.sh
src/: build_index.py  mcp_server.py  tool-prompt-design.md
src/assets/conda/: .gitkeep  _metadata.json  _metadata.yml
src/assets/conda/source/user-guide/configuration/: settings.rst  use-condarc.rst
src/assets/conda/source/user-guide/install/: rpm-debian.rst  windows.rst
src/assets/pdm/: _metadata.json
src/assets/pip/: .gitkeep  _metadata.json  _metadata.yml
src/assets/pip/html/ux-research-design/research-results/: pip-search.md
src/assets/pixi/: _metadata.json
src/assets/poetry/: .gitkeep  _metadata.json  _metadata.yml  repositories.md
src/assets/uv/: .gitkeep  _metadata.json  _metadata.yml
src/index/: .managed.json  meta.json
