[project]
name = "python-dep-manager-companion-mcp-server"
version = "0.1.0"
description = "Local MCP server providing unified search across Python dependency manager documentation"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
urls.repository = "https://github.com/KemingHe/python-dep-manager-companion-mcp-server"
urls.issues = "https://github.com/KemingHe/python-dep-manager-companion-mcp-server/issues"
dependencies = [
    "fastmcp>=2.10.5",
    "tantivy>=0.24.0",
]
